# Physical-AI-Text-Book

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  production-deploy.yml  start-app.bat  start-app.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  load_textbook_content.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
backend/embedding_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: check_all_routes.py  explore_website.py  load_textbook_content.py  main.py
backend/src/api/: exception_handlers.py  main.py  middleware.py  rate_limiter.py
backend/src/api/v1/: chat.py  embeddings.py  search.py  sessions.py
backend/src/config/: database.py  settings.py
backend/src/models/: chat_response.py  chat_session.py  message.py  retrieved_chunk.py  textbook_content.py  user_query.py
backend/src/services/: chat_service.py  embedding_service.py  retrieval_service.py  textbook_content_service.py
backend/src/utils/: logger.py
backend/tests/: test_chat_service.py  test_embedding_service.py  test_integration.py  test_retrieval_service.py
docs/: user-guide.md
specs/003-rag-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/1-textbook-gen/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
website/: Dockerfile  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+75 files in other folders)
