[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Embedding and Vectorization Pipeline for Book Content (RAG Chatbot)"
authors = [{name = "Claude", email = "claude@example.com"}]
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]